force-app/main/default/objects/Configuracao_Equipe__c/Configuracao_Equipe__c.object-meta.xml
<CustomObject>
    <label>Configuração Equipe</label>
    <pluralLabel>Configurações Equipe</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    
    <!-- A correção está neste bloco abaixo: configurando o campo padrão Name -->
    <nameField>
        <label>Número de Configuração</label>
        <type>AutoNumber</type>
        <displayFormat>CONF-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
</CustomObject>