force-app/main/default/objects/Configuracao_Equipe__c/fields/Ultima_Atribuicao__c.field-meta.xml
<CustomField>
    <fullName>Ultima_Atribuicao__c</fullName>
    <label>Última Atribuição</label>
    <type>DateTime</type>
</CustomField>