force-app/main/default/objects/Configuracao_Equipe__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <label>Vendedor</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Configuracoes_Equipe</relationshipName>
</CustomField>